tests/negative/generics/const_fn_mismatch_arity.orng
// const_fn_mismatch_arity.orng:11:21: error: function takes 2 parameters, 1 argument given
//     let x: template(4) = ('1', '2', '3', '4')
//                    ^
// 
fn template(const n: Int, x: Int) -> Type {
    _ = x
    [n]Char
}

fn main() -> Char {
    let x: template(4) = ('1', '2', '3', '4')
    x[3]
}
